# ats-benchmarks

./: README.md  shake.hs
docs/: criterion.html
hs/: .ghc.environment.x86_64-linux-8.2.2  .travis.yml  README.md  Setup.hs  appveyor.yml  bench.sh  cabal.project.local  collatz.cabal  hs.cabal  stack.yaml  test.sh  tmp
hs/bench/: Bench.hs
hs/cbits/: collatz.c
hs/src/: Lib.hs
hs/test/: Spec.hs
rs/: Cargo.toml  README.md
rs/benches/: collatz.rs
rs/src/: lib.rs
src/: ats-bench.dats
