name:                hs
version:             0.1.0.0
homepage:            https://github.com/vmchale/hs#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2017 Vanessa McHale
build-type:          Simple
extra-doc-files:     README.md
cabal-version:       >=1.18
extra-source-files:  ats/collatz.h

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

library
  c-sources:           ats/collatz.c
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

test-suite hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs
                     , hspec
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
  default-language:    Haskell2010

benchmark hs-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , hs
                     , criterion
  ghc-options:         -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/hs
