[package]
name = "collatz"
version = "0.1.0"
authors = ["Vanessa McHale <vamchale@gmail.com>"]
exclude = [ ".gitignore" ]

[dependencies]
num-bigint = "0.1"
num-traits = "0.1"
rust-gmp = "0.5"
ramp = "0.3"

[dev-dependencies]
criterion = { git = "https://github.com/japaric/criterion.rs.git" }

[[bench]]
name = "collatz"
harness = false

[profile.release]
lto = true
